--- a/TarjetaDePresentacion.html
+++ b/TarjetaDePresentacion.html
@@ -46,6 +46,7 @@
             border-radius: 100%;
             width: 90px;
             height: 90px;
+            object-fit: cover;
         }
         .card_perfil__title, .card_perfil__subtitle{
             margin: 0px;
